--- a/home-page.html
+++ b/home-page.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-body-secondary">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -36,19 +36,16 @@
                 <a class="nav-link" href="./back-office.html">Inserisci nuovo prodotto</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
     </header>
     <main>
       <h1 class="text-center">Epic Music Shop</h1>
-      <div class="container-fluid">
-        <div class="row" id="last-load">
-          <h2>Caricati di recente</h2>
+      <div class="container">
+        <div class="row g-4" id="last-load">
+          <h2>Prodotti disponibili</h2>
+          <h6>Clicca sulla foto per maggiori informazioni sul prodotto*</h6>
         </div>
       </div>
     </main>
