--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-body-secondary">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -44,10 +44,10 @@
       <h1 class="text-center">Dettagli prodotto</h1>
       <div class="container-fluid">
         <div class="row"></div>
-        <div class="col-6">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." id="prodPic" style="width: 200px" />
-            <div class="card-body">
+        <div class="col-10">
+          <div class="card d-flex flex-row">
+            <img src="..." class="card-img-left img-fluid" alt="descriptive-img" id="prodPic" style="object-fit: cover; max-width: 600px" />
+            <div class="card-body d-flex flex-column justify-content-evenly">
               <h5 class="card-title" id="prodName">Titolo</h5>
               <p class="card-text" id="prodBrand">Brand</p>
               <p class="card-text" id="prodDescription">Descrizione</p>
