--- a/back-office.html
+++ b/back-office.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
     <main>
-      <div class="container-fluid">
+      <div class="container">
         <h1>Inserisci nuovo prodotto</h1>
         <h6 class="text-danger">I campi indicati con un * sono obbligatori</h6>
         <div class="row">
