--- a/details.html
+++ b/details.html
@@ -44,7 +44,7 @@
       <h1 class="text-center">Dettagli prodotto</h1>
       <div class="container-fluid">
         <div class="row"></div>
-        <div class="col-10">
+        <div class="col-12 col-md-10">
           <div class="card d-flex flex-row">
             <img src="..." class="card-img-left img-fluid" alt="descriptive-img" id="prodPic" style="object-fit: cover; max-width: 600px" />
             <div class="card-body d-flex flex-column justify-content-evenly">
