--- a/details.html
+++ b/details.html
@@ -45,13 +45,13 @@
       <div class="container-fluid">
         <div class="row"></div>
         <div class="col-12 col-md-10">
-          <div class="card d-flex flex-row">
-            <img src="..." class="card-img-left img-fluid" alt="descriptive-img" id="prodPic" style="object-fit: cover; max-width: 600px" />
+          <div class="card d-flex flex-row border-0 bg-body-tertiary">
+            <img src="..." class="card-img-left img-fluid" alt="descriptive-img" id="prodPic" style="object-fit: cover; max-width: 600px; max-height: 600px" />
             <div class="card-body d-flex flex-column justify-content-evenly">
-              <h5 class="card-title" id="prodName">Titolo</h5>
-              <p class="card-text" id="prodBrand">Brand</p>
-              <p class="card-text" id="prodDescription">Descrizione</p>
-              <p class="card-text" id="prodPrice">Prezzo</p>
+              <h4 class="card-title" id="prodName">Titolo</h4>
+              <h6 class="card-text" id="prodBrand">Brand</h6>
+              <h6 class="card-text" id="prodDescription">Descrizione</h6>
+              <h6 class="card-text" id="prodPrice">Prezzo</h6>
             </div>
           </div>
         </div>
